--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://examplesite.com/"
+baseURL: "https://langhaidian.github.io//"
 title: langhaidian
 #paginate: 5
 theme: PaperMod
@@ -52,7 +52,7 @@ params:
 
   label:
     text: "Home"
-    icon: /apple-touch-icon.png
+    icon: /favicon.ico
     iconHeight: 35
 
   # profile-mode
@@ -95,7 +95,7 @@ params:
     hiddenInSingle: true # hide on single page
 
   editPost:
-    URL: "https://github.com/<path_to_repo>/content"
+    URL: "https://github.com/langhaidian/langhaidian.github.io/tree/main/content"
     Text: "Suggest Changes" # edit text
     appendFilePath: true # to append file path to Edit link
 
